@@ -15,6 +15,7 @@
 - added `OPENCLIENT()` method that simplifies work with Total.js Open products
 - increased clean-up timeout in the FlowStream
 - fixed `EXEC()` with `WebSocketClient` controller
+- fixed clean-up of zombie FlowStream connections
 
 ========================
 0.0.50
